# RaylibCudaTemplate

./: CMakeLists.txt  README.md  bunnysimple.mtl
raylib/: Makefile
raylib/raylib/: Makefile
src/: kernel.cu  kernel.hpp  main.cpp
